--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,394 +1,7 @@
 @import url(../blocks/globals/globals.css);
 @import url(../vendor/fonts.css);
-
-
-
-
-
-
-
-/*///////////////////////////////////////////////////////*/
-.page{
-    max-width: 1680px;
-}
-.header{
-    display: flex;
-    width: 100%;
-    border-bottom: 1px solid rgba(242, 242, 242, 1);
-    justify-content: center;
-    margin-top: 47px;
-}
-
-.header-container{
-    display: flex;
-    width:79%;
-    justify-content: space-around;
-    margin-bottom: 26px;
-}
-
-.nav-menu_header{
-    display: flex;
-    gap:51px; 
-}
-
-.header-img{
-    width: 115px;
-height: 25px;
-margin-top: -2px;
-}
-
-.nav-menu_item{
-    font-family: Helios;
-font-size: 16px;
-font-weight: 400;
-line-height: 19.84px;
-text-align: left;
-
-}
-
-.button-nav{
-    background-color: transparent;
-    border: 1px solid transparent;
-}
-
-.nav-socials{
-    font-family: Gilroy;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16.48px;    
-display: flex;
-color: rgba(24, 124, 211, 1);
-margin-top: 3px;
-}
-
-.nav-socials::before{
-    content: "";
-    justify-content: center;
-    position: absolute;
-    margin-top: 5px;
-    margin-left: 124px;
-    align-items: center;
-    width: 5px;
-    height: 5px;
-	border: 2px solid transparent; 
-    border-top: 5px solid rgba(36, 38, 39, 1);
-}
-
-.nav{
-    display: flex;
-    gap:51px;
-}
-
-.button-menu_header{
-    display: none;
-}
-
-@media (width >= 768px) and (width <= 1400px) {
-    .nav{
-        display: none;
-    }
-
-    .button-menu_header{
-        display: flex;
-        border: 0;
-        background-color: transparent;
-    }
-    .header{
-        padding: 38px 35px ;
-        width: 100%;
-        margin-top: 0;
-        border: 0;
-    }
-
-    .header-container{
-        width: 100%;
-        justify-content: space-between;
-        margin-bottom: 0;
-    }
-}
-
-
-/*///////////////////////////////////*/
-
-.invite-team{
-    display: flex;
-    flex-direction: column;
-    margin-top: 36px;
-    position: relative;
-    height: 448px;
-    background-image: url(../images/image24.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: right;
-}
-
-.decorated-zone{
-	border-bottom: 224px solid rgba(0, 50, 100, 1);
-	border-right: 195px solid transparent;
-	max-width: 1100px;
-    position: relative;
-    z-index: 2;
-}
-
-.under_decorated-zone{
-    border-top: 224px solid rgba(0, 50, 100, 1);
-	border-right: 195px solid transparent;
-	max-width: 1100px;
-    z-index: 2;
-    position: relative;
-}
-
-.decorated-img{
-    position: absolute;
-    right: 171px;
-    z-index: 3;
-    bottom: 0;
-}
-
-.title{
-    font-family: HeliosC;
-font-size: 36px;
-font-weight: 700;
-letter-spacing: 1.1px;
-line-height: 41.83px;
-text-align: left;
-color: white;
-    position: absolute;
-    display: flex;
-    top:119px;
-    left: 248px;
-    z-index: 3;
-}
-
-.add-team{
-    width: 254px;
-height: 64px;
-background-color: rgba(233, 134, 42, 1);
-position: absolute;
-z-index: 3;
-border: 0;
-font-family: HeliosC;
-font-size: 16px;
-font-weight: 700;
-line-height: 18.59px;
-text-align: left;
-color: white;
-display: flex;
-letter-spacing: 1.1px;
-align-items: center;
-justify-content: center;
-left: 250px;
-bottom: 119px;
-cursor: pointer;
-}
-
-@media (width >= 768px) and (width <= 1400px){
-    .decorated-zone{
-        border-bottom: 199px solid rgba(0, 50, 100, 1);
-        border-right: 109px solid transparent;
-        max-width: 616px;
-        position: relative;
-        z-index: 2;
-    }
-    
-    .under_decorated-zone{
-        border-top: 199px solid rgba(0, 50, 100, 1);
-        border-right: 109px solid transparent;
-        max-width: 616px;
-        z-index: 2;
-        position: relative;
-        margin-top: -3px;
-    }
-
-    .invite-team{
-        height: 398px;
-        background-size: cover;
-        max-width: 1400px;
-        margin-top: -3px;
-    }
-
-    .decorated-img{
-        width: 527px;
-        height: 329px;
-        right: -134px;
-    }
-
-    .title{
-        top: 85px;
-        left: 40px;
-        font-family: HeliosC;
-font-size: 30px;
-font-weight: 700;
-line-height: 34.86px;
-text-align: left;
-    }
-
-    .add-team{
-        top: 209px;
-        left: 41px;
-    }
-}
-
-
-/*/////////////////////*/
-
-.about-work{
-    margin-top: 77px;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
-
-.about-work_container{
-    width: 1193.27px;
-height: 753px;
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-grid-template-rows: repeat(3, 1fr);
-}
-
-.about-work_block{
-    width: 398.27px;
-height: 377px;
-border: 1px solid rgba(237, 237, 237, 1);
-display: flex;
-flex-direction: column;
-gap: 35px;
-justify-content: center;
-align-items: center;
-}
-
-.about-work_img{
-    margin-top: 6px;
-}
-
-.about-work_title{
-    font-family: Helios;
-font-size: 20px;
-font-weight: 400;
-line-height: 24.8px;
-text-align: center;
-margin-top: 10px;
-}
-
-.about-work_undertitle{
-    font-family: Helios;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-text-align: center;
-color:rgba(100, 100, 100, 1);
-width: 297px;
-}
-
-/*////////////////*/
-
-.about-director{
-    width: 100%;
-    display: flex;
-    margin-top: 70px;
-    justify-content: center;
-}
-
-.slider-line{
-    display: flex;
-    width: 4440px;
-    height: 446px;
-    position: relative;
-    left: 0;
-    transition: all ease 1s;
-}
-
-.slider{
-    border: 1px solid red;
-    max-width: 1480px;
-    height: 446px;
-    overflow: hidden;
-}
-
-.slider-line_block{
-    max-width: 1480px;
-height: 446px;
-display: flex;
-}
-
-.button-left{
-    display: flex;
-    position: sticky;
-    left: 40px;
-    top:40%;
-    border: 1px solid rgba(224, 224, 224, 1);
-    background-color: transparent;
-    width: 82px;
-height: 94px;
-justify-content: center;
-align-items: center;
-}
-
-.button-right{
-    position: sticky;
-    right: 40px;
-    border: 0;
-    border: 1px solid rgba(224, 224, 224, 1);
-    background-color: transparent;
-    width: 82px;
-    height: 94px;
-    justify-content: center;
-    align-items: center;
-    top:40%;
-}
-
-.container-about_boss{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-left: 90px;
-    margin-top: 118px;
-}
-
-.name-finboss{
-    font-family: Helios;
-font-size: 36px;
-font-weight: 400;
-line-height: 28px;
-text-align: left;
-}
-
-.boss{
-    font-family: Helios;
-font-size: 16px;
-font-weight: 400;
-line-height: 28px;
-color: rgba(130, 130, 130, 1);
-}
-
-.think-about_finboss{
-    font-family: Helios;
-font-size: 18px;
-font-weight: 400;
-line-height: 32px;
-text-align: left;
-margin-top: 20px;
-}
-
-.finnboss_img{
-    position: relative;
-    right: 69px;
-    display: flex;
-    height: 425px;
-    margin-top: 20px;
-}
-
-@media (width >= 768px) and (width <= 1400px){
-    .slider-line_block{
-        display: flex;
-        height: 401px;
-        overflow-y:auto;
-        flex-wrap: wrap-reverse;
-    }
-
-    .finnboss_img-container{
-        background-color: rgba(247, 247, 247, 1);
-        width: 100%;
-    }
-}
+@import url(../blocks/header.css);
+@import url(../blocks/section1.css);
+@import url(../blocks/section2.css);
+@import url(../blocks/section3.css);
+@import url(../blocks/popup.css);
